# bedrock-server-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  http_docs.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md  issue-template.md  report-a-bug.md  request-a-feature.md
.github/workflows/: bedrock-server-manager-multi-python-test.yml  bedrock-server-manager-package-checks.yml  bedrock-server-manager-upload-artifacts.yml  build-test.yml  pages.yml  publish-docker.yml  publish-to-pypi.yaml  publish-to-testpypi.yaml
.test/: test_cleanup.py
.test/config/: test_settings.py  test_settings_get_set.py
.test/core/: test_error.py  test_logging.py
.test/utils/: test_general.py  test_package_finder.py
DEPRECATED/: README.md
DEPRECATED/bash/: README.md
DEPRECATED/python/: README.md
bedrock_server_manager/: __init__.py  cleanup.py  cli.py  error.py  handlers.py  logging.py
bedrock_server_manager/api/: addon.py  backup_restore.py  misc.py  player.py  server.py  server_install_config.py  web.py  (+4 more)
docs/: .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CLI_COMMANDS.md  EXTRAS.md  HTTP_API.md  PLUGIN_API.md  QUICK_HTTP_API.md  api.rst  conf.py  core_functions.rst  index.rst  plugin_internals.rst  public_classes.rst  requirements.txt
plugins/: api_docs_generator.py  class_docs_generator.py  custom_event_loop_test.py  lifecycle_test_plugin.py  nested_seperate_server_test.py  ping_plugin.py  pong_plugin.py  recursive_loop_test.py
test/: conftest.py  test_instances.py  test_logging.py  test_main_module.py
(+408 files in other folders)
