[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-server-manager"
version = "3.1.0a1"
authors = [
  { name="ZVortex11325", email="zvortex11325-github@outlook.com" },
]
description = "A manager for Minecraft Bedrock Dedicated Servers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Environment :: Console",
	"Topic :: Games/Entertainment :: Game Servers"
]

dependencies = [
    "requests",
    "psutil",
    "colorama",
    "flask"
]

[project.scripts]
bedrock-server-manager = "bedrock_server_manager:main"

[tool.pytest.ini_options]
testpaths = [".test"]